# HKD-MPC

./: .gitignore  CMakeLists.txt  README.md
HKDMPC/: CMakeLists.txt  HKDMPC.cpp  HKDMPC.h  ddp_setting.info  mpc_main.cpp
HKDMPC/HKD-TrajOpt/: CMakeLists.txt  HKDConstraints.cpp  HKDConstraints.h  HKDCost.cpp  HKDCost.h  HKDLog.h  HKDModel.h  HKDProblem.cpp  HKDProblem.h  HKDReference.cpp  HKDReference.h  HKDReset.h
HKDMPC/HKD-TrajOpt/CasadiGen/: CMakeLists.txt
HKDMPC/HKD-TrajOpt/CasadiGen/header/: casadiGen_HKD.h  comp_foot_jacob_3_casadi.h  comp_foot_jacob_4_casadi.h  hkinodyn_casadi.h  hkinodyn_par_casadi.h
HKDMPC/HKD-TrajOpt/CasadiGen/source/: comp_foot_jacob_1_casadi.cpp  comp_foot_pos_casadi.cpp  hkinodyn_casadi.cpp
HKDMPC/log/: control_log.txt  cost_log.txt  state_log.txt  value_grad_log.txt
HKDMPC/settings/: constraint_params.info  ddp_setting.info
HSDDPSolver/: CMakeLists.txt
HSDDPSolver/common/: HSDDP_CPPTypes.h  HSDDP_CompoundTypes.h  HSDDP_Utils.cpp  HSDDP_Utils.h
HSDDPSolver/header/: ConstraintsBase.h  MultiPhaseDDP.h  SinglePhase.h  SinglePhaseBase.h  SinglePhaseInterface.h  TrajectoryManagement.h
HSDDPSolver/source/: MultiPhaseDDP.cpp  SinglePhase.cpp  SinglePhaseInterface.cpp  TrajectoryManagement.cpp
MPC_Controller/: CMakeLists.txt  Imitation_Reference.cpp  Imitation_Reference.h  MPCSolver.cpp  MPCSolver.h  main.cpp  mpc_main.cpp
MPC_Controller/HKD-TrajOpt/: CMakeLists.txt  HKDConstraints.cpp  HKDConstraints.h  HKDContactSchedule.cpp  HKDContactSchedule.h  HKDCost.cpp  HKDCost.h  HKDLog.h  HKDModel.cpp  HKDModel.h  HKDProblem.cpp  HKDProblem.h  HKDReference.h  HKDReset.h
MPC_Controller/HKD-TrajOpt/CasadiGen/: CMakeLists.txt
MPC_Controller/HKD-TrajOpt/CasadiGen/header/: CasadiGen.h  comp_foot_jacob_1_casadi.h  comp_foot_jacob_2_casadi.h  comp_foot_pos_casadi.h
MPC_Controller/HKD-TrajOpt/CasadiGen/source/: CasadiGen.cpp  comp_foot_jacob_2_casadi.cpp  comp_foot_jacob_3_casadi.cpp  comp_foot_jacob_4_casadi.cpp  hkinodyn_par_casadi.cpp
MPC_Controller/HSDDPSolver/: CMakeLists.txt
MPC_Controller/HSDDPSolver/common/: HSDDP_CPPTypes.h  HSDDP_CompoundTypes.h  HSDDP_Utils.cpp  HSDDP_Utils.h
MPC_Controller/HSDDPSolver/header/: ConstraintsBase.h  CostBase.h  MultiPhaseDDP.h  SinglePhase.h  SinglePhaseBase.h  TrajectoryManagement.h
MPC_Controller/HSDDPSolver/source/: CostBase.cpp  MultiPhaseDDP.cpp  SinglePhase.cpp  TrajectoryManagement.cpp
MPC_Controller/PolicyRollout/: contact_post.csv  state_post.csv
MPC_Controller/PolicyRollout/gaitLib/: contact_post.csv  state_post.csv
MPC_Controller/PolicyRollout/gaitLib/bound_jump_bound/: contact_post.csv  state_post.csv
MPC_Controller/PolicyRollout/gaitLib/bounding/: contact_post.csv  state_post.csv
MPC_Controller/PolicyRollout/gaitLib/mixed_hopping/: contact_post.csv  state_post.csv
MPC_Controller/PolicyRollout/gaitLib/multi_gait/: contact_post.csv  state_post.csv
MPC_Controller/PolicyRollout/gaitLib/run_jump/: contact_post.csv  state_post.csv
MPC_Controller/PolicyRollout/trot/: contact_post.csv  state_post.csv
MPC_Controller/common/: cppTypes.h  utilities.h
MPC_Controller/log/: contact_log.txt  control_log.txt  cost_log.txt  state_log.txt  value_grad_log.txt
common/: cTypes.h  (+4 more)
(+323 files in other folders)
